# llama.cpp_dds

./: -  .claude.json  .gitignore  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  run_all_benchmarks.sh  run_gpu_benchmark.sh  run_quick_bench.sh
ci/: run.sh
common/: arg.cpp  common.h
dds/: .gitignore  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  benchmark_client.cpp  benchmark_final  benchmark_final.cpp  benchmark_http.py  benchmark_multi_dds.cpp  benchmark_multi_http.py  benchmark_persistent.cpp  benchmark_persistent_v2  benchmark_persistent_v2.cpp  benchmark_stream_dds.cpp  benchmark_stream_http.py  compile_bench.sh  compile_idl.sh  compile_persistent.sh  compile_test.sh  cyclonedds-local.xml  cyclonedds-network-ultra.xml  cyclonedds-network.xml  cyclonedds-shm-iox.xml  cyclonedds-shm.xml  cyclonedds-ultra.xml  dds_bridge.cpp  dds_bridge.h  dds_idl_wrapper.h  dds_transport.cpp  dds_transport.h  dds_types.h  dds_utils.h  persistent_client  persistent_client.cpp  persistent_simple  persistent_simple.cpp  plot_benchmarks.py  plot_multi_benchmarks.py  plot_results.py  plot_stream_benchmarks.py  (+13 more)
dds/idl/: CLAUDE.md  LlamaDDS.c  LlamaDDS.h  LlamaDDS.idl  OrchestratorDDS.idl
dds/idl/llama/: .idlpy_manifest  _LlamaDDS.py  __init__.py
dds/idl/orchestrator/: .idlpy_manifest  _OrchestratorDDS.py  __init__.py
dds/scripts/: build_dds.ps1  build_dds2.ps1  build_dds3.ps1  check_dds.ps1  check_dds2.ps1  check_dds4.ps1  check_dds_api.ps1  check_dds_sym.ps1  find_dds_h.ps1  find_dds_header.ps1  find_dds_pub.ps1  generate_idl.ps1  install_dds.ps1  install_dds.sh  install_dds2.ps1  install_dds_local.ps1  install_ddscxx.ps1  read_idl_h.ps1  test_dds.ps1  test_dds_compare.sh  test_shm.sh
docs/: DDS_QUALITY_REPORT.md  dds.md
grpc/: CMakeLists.txt  grpc_bridge.cpp  grpc_bridge.h  grpc_proto_wrapper.h  grpc_transport.cpp  grpc_transport.h  test_client_grpc.cpp
grpc/proto/: llama_service.proto
scripts/: download_model.py  start_server.sh
scripts/benchmarks/: run_benchmark.sh  run_persistent.sh
scripts/checks/: check_help.ps1  check_idl_files.ps1  check_idlc.ps1  check_proj.ps1  check_server.ps1  check_uuid.ps1  check_version.sh
scripts/setup/: install_uuid.ps1
scripts/tests/: test_compare.py  test_http.py  test_http.sh  test_server.ps1
scripts/utils/: find_ggml.ps1  find_json.ps1  find_mtmd.ps1
tests/: CMakeLists.txt  test-dds.cpp
todo/: BENCHMARK_TODO.md  DDS_TODO.md
tools/server/: CMakeLists.txt  server-context.cpp  server-context.h  server.cpp
